# owlbell

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Makefile  RUN_LOCAL.md  check_tables.py  check_voices.py  coverage.xml  create_receptionist_template.py  docker-compose.api.yml  docker-compose.override.yml  email_monitor.py  fly.toml  generate_migration.py  index.html  leads_data.json  pyproject.toml  railway.beat.json  railway.json  railway.worker.json  receptionist-template.json  receptionist-test.html  run_migration.py  run_migrations.py  test_web_call.py  update_llm.py
.github/workflows/: ci.yml  deploy.yml
_backend-archive/backend-2026-07-01-ai-slop-reset/: .gitignore  Dockerfile  __init__.py  _bootstrap.py  _install_paths.py  _owlbell_paths.pth  alembic.ini  app_factory.py  config.py  dependencies.py  gunicorn.conf.py  import_roots.py  install.ps1  install.sh  logging_config.yaml  main.py  models.py  path_setup.py  pyproject.toml  requirements-dev-lite.txt  requirements-gates.txt  run_local.py  shutdown.py
_backend-archive/backend-2026-07-01-ai-slop-reset/.security_exercise_pgdata/: log  postgresql.conf  postmaster.opts  postmaster.pid
_backend-archive/backend-2026-07-01-ai-slop-reset/ai/: __init__.py
_backend-archive/backend-2026-07-01-ai-slop-reset/api/: __init__.py  (+5 more)
backend/: .dockerignore  Dockerfile  README.md  __init__.py  app_factory.py  config.py  dependencies.py  main.py  pyproject.toml  receptionist-test.html  requirements-cloud.txt  requirements-dev-lite.txt  requirements.txt  run_local.py  shutdown.py  startup.py
backend/ai/: __init__.py
backend/ai/tools/: __init__.py  registry.py
backend/api/: __init__.py  auth_tokens.py  dependencies.py  main.py  middleware.py
backend/api/routes/: admin.py  agency.py  agent_tools.py  analytics.py  appointments.py  auth.py  billing.py  business.py  calls.py  client_portal.py  leads.py  messages.py  phone_numbers.py  retell_webhooks.py  team.py
backend/api/schemas/: admin.py  appointments.py  business.py  messages.py
backend/business/: __init__.py
backend/business/appointments/: service.py
backend/business/crm/: __init__.py  service.py
backend/business/knowledge/: __init__.py
backend/business/messages/: __init__.py
backend/business/notifications/: service.py
backend/business/routing/: service.py
backend/business/summarizer/: __init__.py
backend/db/: __init__.py  seed.py  seed_data.py
backend/db/cache/: client.py
backend/db/migrations/: alembic.ini  env.py  schema.sql  script.py.mako
backend/db/models/: __init__.py  ai.py  business.py  call.py  enums.py  integration.py  onboarding.py  operations.py  prompts.py  tenant.py  user.py
backend/db/repositories/: __init__.py  base.py
backend/domain/onboarding/: self_serve_pipeline.py  steps.py
backend/domain/scripts/: version_service.py
backend/integrations/gmail/: setup_oauth.py
backend/integrations/minio/: __init__.py
backend/integrations/oauth/: __init__.py
backend/integrations/retell/: service.py
backend/integrations/sendgrid/: __init__.py
backend/integrations/slack/: __init__.py
backend/integrations/stripe/: __init__.py  service.py
backend/integrations/twilio/: __init__.py  service.py
backend/integrations/webhooks/: __init__.py
backend/leads/: __init__.py  cli.py  email_ai.py  email_finder.py  email_sender.py  lead_generator.py  lead_store.py  outreach.py  pipeline.py  reply_handler.py  scraper.py
backend/operations/: __init__.py
backend/operations/admin/: __init__.py  routes.py
backend/operations/audit/: __init__.py
backend/operations/billing/: tracker.py
backend/operations/features/: __init__.py  flags.py
backend/operations/onboarding/: __init__.py  automation.py  routes.py
backend/operations/prompts/: manager.py
backend/operations/tenant/: __init__.py  middleware.py
backend/orchestrator/: __init__.py  call_queue.py  circuit_breaker.py  event_bus.py  gateway.py  health_monitor.py  load_balancer.py  models.py  session_manager.py  tasks.py  worker_pool.py
backend/routes/: audits.py  health.py  modules.py  webhooks.py
backend/schemas/: audit.py
backend/scripts/: create_tenant.py  generate_migration.py  run_plan_gates.ps1  setup_supabase.py  stripe_setup.py
backend/services/: audit_service.py  module_catalog.py
backend/telephony/: __init__.py  manager.py
backend/telephony/api/: __init__.py
backend/telephony/core/: __init__.py  call_handler.py
backend/tests/: test_intake_service.py  test_onboarding_intake.py  test_onboarding_script_versions.py  test_orchestrator_engine.py  test_self_serve_pipeline.py  test_stt_whisper.py  test_tts_piper.py
backend/tests/e2e/: conftest.py  test_appointment_booking.py  test_call_routing.py  test_failover_recovery.py  test_full_api_walkthrough.py  test_inbound_call_flow.py  test_multi_tenant.py  test_webhook_delivery.py
backend/tests/orchestrator/: test_call_queue.py  test_circuit_breaker.py  test_gateway.py  test_health_monitor.py  test_models.py  test_session_manager.py  test_tasks.py  test_worker_pool.py
dashboard/: .dockerignore  .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  email-copy-instructions.md  email-sentence-bank.md  live_calling_setup.md
infrastructure/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.freeswitch  Dockerfile.piper  Dockerfile.whisper  docker-compose.yml  server.py
infrastructure/monitoring/: alertmanager.yml  alerts.yml  loki.yml  prometheus.yml  promtail.yml
infrastructure/nginx/: nginx.conf
infrastructure/scripts/: backup.sh  first-run.sh  setup.sh  update.sh
n8n/: generate-workflow.py  retell-provisioning.json  test-harness.py
next-app/: next.config.ts  package-lock.json  package.json
next-app/public/: llms.txt
next-app/scripts/: capture-homepage-screenshot.ts  verify-homepage.ts
next-app/src/: proxy.ts
(+880 files in other folders)
