[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "answerflow-ai"
version = "1.0.0"
description = "AI-powered 24/7 phone answering service for businesses"
readme = "../README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Owlbell Team", email = "dev@owlbell.xyz"},
]
keywords = [
    "phone",
    "answering",
    "ai",
    "voip",
    "freeswitch",
    "llm",
    "voice",
    "telephony",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Framework :: Celery",
]

dependencies = [
    # -- Core Framework --------------------------------------------------
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "starlette>=0.41.0,<1.0.0",

    # -- Configuration ---------------------------------------------------
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",

    # -- Database --------------------------------------------------------
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",

    # -- Cache & Pub/Sub -------------------------------------------------
    "redis>=5.2.0,<6.0.0",
    "hiredis>=3.1.0,<4.0.0",

    # -- Distributed Tasks ------------------------------------------------
    "celery>=5.4.0,<6.0.0",
    "kombu>=5.4.0,<6.0.0",
    "billiard>=4.2.0,<5.0.0",

    # -- HTTP Clients ----------------------------------------------------
    "aiohttp>=3.11.0,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "httpx>=0.28.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",

    # -- AI / ML ---------------------------------------------------------
    "openai-whisper>=20240930",
    "faster-whisper>=1.1.0,<2.0.0",
    "transformers>=4.46.0,<5.0.0",
    "torch>=2.5.0,<3.0.0",
    "torchaudio>=2.5.0,<3.0.0",
    "numpy>=2.1.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",

    # -- Audio Processing ------------------------------------------------
    "librosa>=0.10.2,<1.0.0",
    "soundfile>=0.12.1,<1.0.0",
    "pydub>=0.25.1,<1.0.0",
    "webrtcvad>=2.0.10,<3.0.0",
    "pyaudio>=0.2.14,<1.0.0",

    # -- Telemetry & Monitoring -------------------------------------------
    "prometheus-client>=0.21.0,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "opentelemetry-api>=1.28.0,<2.0.0",
    "opentelemetry-sdk>=1.28.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "sentry-sdk[fastapi]>=2.19.0,<3.0.0",

    # -- Communications --------------------------------------------------
    "twilio>=9.3.0,<10.0.0",
    "sendgrid>=6.11.0,<7.0.0",
    "python-slack-sdk>=3.33.0,<4.0.0",

    # -- Calendar & CRM --------------------------------------------------
    "google-auth>=2.36.0,<3.0.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",
    "google-api-python-client>=2.154.0,<3.0.0",
    "icalendar>=6.1.0,<7.0.0",
    "hubspot-api-client>=9.0.0,<10.0.0",

    # -- Email ------------------------------------------------------------
    "aiosmtplib>=3.0.0,<4.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "markdown>=3.7.0,<4.0.0",

    # -- Utilities --------------------------------------------------------
    "orjson>=3.10.0,<4.0.0",
    "ujson>=5.10.0,<6.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "toml>=0.10.2,<1.0.0",
    "croniter>=5.0.0,<6.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "cachetools>=5.5.0,<6.0.0",
    "python-multipart>=0.0.19,<1.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # -- Testing -----------------------------------------------------------
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-timeout>=2.6.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "faker>=33.0.0,<34.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "pytest-factoryboy>=2.7.0,<3.0.0",
    "freezegun>=1.5.0,<2.0.0",
    "responses>=0.25.0,<1.0.0",
    "aioresponses>=0.7.7,<1.0.0",

    # -- Linting & Formatting ----------------------------------------------
    "ruff>=0.8.0,<1.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pylint>=3.3.0,<4.0.0",
    "pydocstyle>=6.3.0,<7.0.0",

    # -- Type Stubs --------------------------------------------------------
    "types-pyyaml>=6.0.0,<7.0.0",
    "types-requests>=2.32.0,<3.0.0",
    "types-redis>=4.6.0,<5.0.0",
    "types-passlib>=1.7.0,<2.0.0",
    "types-python-jose>=3.3.0,<4.0.0",
    "mypy-extensions>=1.0.0,<2.0.0",

    # -- Security Scanning -------------------------------------------------
    "bandit>=1.7.10,<2.0.0",
    "safety>=3.2.0,<4.0.0",
    "pip-audit>=2.7.0,<3.0.0",

    # -- Debugging ---------------------------------------------------------
    "ipython>=8.29.0,<9.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "rich>=13.9.0,<14.0.0",
    "icecream>=2.1.3,<3.0.0",

    # -- Documentation -----------------------------------------------------
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.27.0,<1.0.0",
]

piper = [
    # Piper TTS dependencies
    "piper-tts>=1.2.0,<2.0.0",
    "onnxruntime>=1.20.0,<2.0.0",
    "onnxruntime-gpu>=1.20.0,<2.0.0",
]

all = [
    "answerflow-ai[dev,piper]",
]

[project.urls]
Homepage = "https://owlbell.xyz"
Documentation = "https://docs.owlbell.xyz"
Repository = "https://github.com/answerflow/answerflow-ai"
Issues = "https://github.com/answerflow/answerflow-ai/issues"
Changelog = "https://github.com/answerflow/answerflow-ai/blob/main/CHANGELOG.md"

[project.scripts]
answerflow-api = "backend.main:main"
answerflow-worker = "orchestrator.tasks:celery_app.worker_main"
answerflow-migrate = "backend.db.migrations.env:main"
answerflow-health = "backend.main:health_check_cli"

# ---------------------------------------------------------------------------
# Tool Configurations
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | migrations
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", "venv", ".venv"]
known_first_party = ["backend", "api", "orchestrator", "operations"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC",# flake8-async
    "S",   # flake8-bandit (security)
    "C90", # mccabe complexity
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "S101",  # Use of assert detected
    "S311",  # Standard pseudo-random generators
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "RUF012", # Mutable class defaults
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S", "PLR"]
"**/*_test.py" = ["D", "S", "PLR"]
"backend/db/migrations/**/*.py" = ["D"]
"backend/main.py" = ["PLR0915"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "node_modules/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "freeswitch.*",
    "celery.*",
    "kombu.*",
    "billiard.*",
    "whisper.*",
    "faster_whisper.*",
    "torch.*",
    "torchaudio.*",
    "transformers.*",
    "librosa.*",
    "soundfile.*",
    "pydub.*",
    "webrtcvad.*",
    "pyaudio.*",
    "piper.*",
    "onnxruntime.*",
    "google.*",
    "hubspot.*",
    "sendgrid.*",
    "twilio.*",
    "slack_sdk.*",
    "aiosmtplib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=backend",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (needs DB, Redis)",
    "e2e: End-to-end tests (full stack)",
    "slow: Slow tests (skip in fast mode)",
    "ai: Tests requiring AI model services",
    "fs: Tests requiring FreeSWITCH",
    "celery: Tests requiring Celery worker",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore::UserWarning:pydantic.*",
]

[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "backend/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
precision = 1

[tool.bandit]
exclude_dirs = ["tests", "migrations", "venv", ".venv"]
skips = ["B101", "B311"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.metadata]
allow-direct-references = true
